[gd_scene load_steps=14 format=3 uid="uid://dv86qhk6qoiof"]

[ext_resource type="Script" path="res://Scene/Monster/monster.gd" id="1_koy11"]
[ext_resource type="Texture2D" uid="uid://bmudrg8ue120v" path="res://Sprites/Monster/Monster_1.png" id="2_jpyij"]
[ext_resource type="Texture2D" uid="uid://u2lnb0rf5xqm" path="res://Sprites/Monster/Monster_2.png" id="3_2sc1v"]
[ext_resource type="Texture2D" uid="uid://b64oq2qemenxn" path="res://Sprites/Monster/Monster_3.png" id="4_p4b17"]
[ext_resource type="Texture2D" uid="uid://b1352jl6bxbga" path="res://Sprites/Monster/Monster_4.png" id="5_ad4ca"]
[ext_resource type="Texture2D" uid="uid://chvu1ukr0ii2v" path="res://Sprites/Monster/Death_background.png" id="6_1g3fm"]
[ext_resource type="Texture2D" uid="uid://caduruays6cek" path="res://Sprites/Monster/You_die_RU.png" id="7_q4t8d"]
[ext_resource type="AudioStream" uid="uid://4jh5xy8mpn82" path="res://Sounds/Game over.wav" id="8_mvj27"]
[ext_resource type="Texture2D" uid="uid://bw76hkvytlpka" path="res://Sprites/Monster/Blood.png" id="9_o4aml"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0en7y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jpyij")
}, {
"duration": 1.0,
"texture": ExtResource("3_2sc1v")
}, {
"duration": 1.0,
"texture": ExtResource("4_p4b17")
}, {
"duration": 1.0,
"texture": ExtResource("5_ad4ca")
}, {
"duration": 1.0,
"texture": ExtResource("5_ad4ca")
}, {
"duration": 1.0,
"texture": ExtResource("5_ad4ca")
}, {
"duration": 1.0,
"texture": ExtResource("5_ad4ca")
}, {
"duration": 1.0,
"texture": ExtResource("5_ad4ca")
}, {
"duration": 1.0,
"texture": ExtResource("5_ad4ca")
}, {
"duration": 1.0,
"texture": ExtResource("5_ad4ca")
}, {
"duration": 1.0,
"texture": ExtResource("5_ad4ca")
}, {
"duration": 1.0,
"texture": ExtResource("5_ad4ca")
}, {
"duration": 1.0,
"texture": ExtResource("4_p4b17")
}, {
"duration": 1.0,
"texture": ExtResource("3_2sc1v")
}, {
"duration": 1.0,
"texture": ExtResource("2_jpyij")
}],
"loop": false,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jpyij")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_u8ija"]
offsets = PackedFloat32Array(0, 0.78, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.780392, 0.780392, 0.780392, 1, 1, 1, 1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j5uo5"]
size = Vector2(132, 77)

[sub_resource type="CircleShape2D" id="CircleShape2D_vp14m"]
radius = 145.194

[node name="Monster" type="CharacterBody2D" groups=["Language", "monster"]]
modulate = Color(0.717647, 0.764706, 0.678431, 1)
scale = Vector2(0.8, 0.8)
collision_layer = 4
collision_mask = 58
script = ExtResource("1_koy11")

[node name="Monster_sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_0en7y")
animation = &"idle"
frame = 14
frame_progress = 1.0

[node name="Blood" type="CPUParticles2D" parent="Monster_sprite"]
modulate = Color(0.552941, 0.552941, 0.552941, 0.768627)
show_behind_parent = true
position = Vector2(-72.5, 215)
scale = Vector2(0.3, 0.3)
lifetime = 2.0
texture = ExtResource("9_o4aml")
emission_shape = 1
emission_sphere_radius = 128.0
gravity = Vector2(0, 0)
scale_amount_min = 0.1
scale_amount_max = 0.2
color_ramp = SubResource("Gradient_u8ija")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-52, 207)
shape = SubResource("RectangleShape2D_j5uo5")
disabled = true

[node name="raycast_1" type="RayCast2D" parent="."]
unique_name_in_owner = true
rotation = -1.39937
target_position = Vector2(-179.009, 717.302)
collision_mask = 32
collide_with_areas = true
collide_with_bodies = false

[node name="raycast_3" type="RayCast2D" parent="."]
unique_name_in_owner = true
rotation = -1.39937
target_position = Vector2(-179.009, 717.302)
collision_mask = 16
collide_with_areas = true

[node name="raycast_2" type="RayCast2D" parent="."]
unique_name_in_owner = true
rotation = -1.53998
target_position = Vector2(-125.804, 746.73)
collision_mask = 32
collide_with_areas = true
collide_with_bodies = false

[node name="raycast_5" type="RayCast2D" parent="."]
unique_name_in_owner = true
rotation = -1.7834
target_position = Vector2(-82.6769, 519.246)
collision_mask = 32
collide_with_areas = true
collide_with_bodies = false

[node name="raycast_4" type="RayCast2D" parent="."]
unique_name_in_owner = true
rotation = -1.53998
target_position = Vector2(-125.804, 746.73)
collision_mask = 16
collide_with_areas = true

[node name="Area_player" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="Collision_monster" type="CollisionShape2D" parent="Area_player"]
unique_name_in_owner = true
position = Vector2(-7.50001, 200)
shape = SubResource("CircleShape2D_vp14m")
disabled = true
debug_color = Color(0.85098, 0.34902, 0.333333, 0.419608)

[node name="CanvasLayer_game_over" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 4
visible = false

[node name="Control" type="Control" parent="CanvasLayer_game_over"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer_game_over/Control"]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_1g3fm")

[node name="Texture_text" type="TextureRect" parent="CanvasLayer_game_over/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -56.0
offset_right = 300.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_q4t8d")

[node name="Game_over" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_mvj27")
volume_db = -20.0

[connection signal="body_entered" from="Area_player" to="." method="_on_area_player_body_entered"]
